--- a/css/footer.css
+++ b/css/footer.css
@@ -51,6 +51,7 @@ footer {
 }
 
 .tittle-box {
+    margin-top: 30px;
     font-family: 'Libre Baskerville', serif;
     text-transform: uppercase;
     color: #d5d8df;
