--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body {
     font-size: 15px;
     font-weight: 400;
     line-height: 1.733;
-    font-family: 'PT Serif', serif;
+    font-family: 'Lato', sans-serif;
     width: 100%;
     overflow-x: hidden;
 }
@@ -21,7 +21,28 @@ body {
     margin: 0 auto;
 }
 
-.padding-y-100 {
+.pt-100 {
     padding-top: 100px;
     padding-bottom: 100px;
+}
+
+.main-tittle-wrap {
+    text-align: center;
+}
+
+.main-tittle-wrap>h2 {
+    font-size: 30px;
+    font-family: 'Libre Baskerville', serif;
+    color: #304771;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+
+.main-tittle-wrap>p {
+    font-size: 14px;
+    color: #5a5f68;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 2px;
 }
